--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
-	<p id="asgn1">Assignment 1</p>
+	<a href="/asgn1/login.html"><h2 id="asgn1">Assignment 1</h2></a>
 
 </body>
 </html>
