--- a/asgn1/select.html
+++ b/asgn1/select.html
@@ -6,9 +6,11 @@
 	
 </head>
 <body class="background">
-	<div class="content col-5">
-		<button class="btn col-5">Log In</button>
-		<button  class="btn col-5">Sign Up</button>
+	<div class="content">
+		<a href="login.html"><button class="btn col-6">Log In</button></a>
+		<a href="signup.html"><button class="btn col-6">Sign Up</button></a>
+		<p class="log">kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</p>
+		<p class="sin">llllllllllll</p>
 	</div>
 </body>
 </html>
