--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
-	<a href="/asgn1/login.html"><h2 id="asgn1">Assignment 1</h2></a>
+	<a href="asgn1/select.html"><h2 id="asgn1">Assignment 1</h2></a>
 
 </body>
 </html>
