--- a/asgn1/signup.html
+++ b/asgn1/signup.html
@@ -14,9 +14,11 @@
 				<label class="preference">Name:<br></label>
 				<input type="text" name="name" placeholder="Enter your full name"><br>
 				<label class="preference">Gender:<br></label>
-				<input type="radio" name="gender" value="male"> Male<br>
-  				<input type="radio" name="gender" value="female"> Female<br>
-  				<input type="radio" name="gender" value="other"> Other<br>
+				<span class="radio_text"><input type="radio" name="gender" value="male"> Male</span>
+  				<span class="radio_text"><input type="radio" name="gender" value="female"> Female</span>
+  				<span class="radio_text"><input type="radio" name="gender" value="other"> Other</span><br>
+  				<label class="preference">Email:<br></label>
+				<input type="text" name="email" placeholder="Enter your email id"><br>
 				<label class="preference">Password:<br></label>
 				<input type="password" name="password" placeholder="Enter you Password"><br>
 				<input type="submit" name="Log In">
