--- a/asgn1/signup.html
+++ b/asgn1/signup.html
@@ -7,8 +7,8 @@
 </head>
 <body class="background">
 	<div class="content">
-		<a href="login.html"><button class="active col-6">Log In</button></a>
-		<a href="signup.html"><button class="col-6 deactive">Sign Up</button></a>
+		<a href="login.html"><button class="deactive col-6">Log In</button></a>
+		<a href="signup.html"><button class="col-6 active">Sign Up</button></a>
 		<div class="form">
 			<form>
 				<label class="preference">Name:<br></label>
@@ -19,8 +19,12 @@
   				<span class="radio_text"><input type="radio" name="gender" value="other"> Other</span><br>
   				<label class="preference">Email:<br></label>
 				<input type="text" name="email" placeholder="Enter your email id"><br>
+				<label class="preference">Date of Birth<br></label>
+				<input type="text" name="email" placeholder="DD-MM-YYYY"><br>
 				<label class="preference">Password:<br></label>
 				<input type="password" name="password" placeholder="Enter you Password"><br>
+				<label class="preference">Confirm Password:<br></label>
+				<input type="password" name="password" placeholder="Retype you Password"><br>
 				<input type="submit" name="Log In">
 			</form>
 		</div>
