--- a/asgn1/login.html
+++ b/asgn1/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Sofia'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 </head>
